Bug 365652 - recursive update doesn't work
Summary: recursive update doesn't work
Status: RESOLVED FIXED
Alias: None
Product: cervisia
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Loose
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-14 08:44 UTC by poldi871
Modified: 2017-03-24 17:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description poldi871 2016-07-14 08:44:02 UTC
Cervisia-Version: 3.10.0
OS: OpenSuSE Leap - latest version (online updated)

If i select the module's main folder of a project and use F5 to üpdate, only a unforeseeable part of the folders seem to be updated. They remain in state "unknown". I have to select each single folder of a project to get an updated state of the files of the folder. All recursive updates are selected in the settings dialog. And the same setting works perfectly in older Versions of KDE (eg. OpenSuSE 12.2).
In the state window at the bottom changed files, or files which need to be updated are shown correctly.

Reproducible: Always

Steps to Reproduce:
1. select main folder of a project
2. F5 to update the state of a project
3.


Expected Results:  
Unfolding the view should show the actual state of the files
Comment 1 poldi871 2016-12-09 09:44:39 UTC
nobody cares
Comment 2 Martin Koller 2017-03-12 14:29:39 UTC
I care. I can confirm this.
Comment 3 Martin Koller 2017-03-12 15:40:11 UTC
Git commit 7823959ea59b526be947cbdfa00ffab54ce718d9 by Martin Koller.
Committed on 12/03/2017 at 15:39.
Pushed by mkoller into branch 'master'.

Fix recursive algorithm

M  +14   -4    updateview.cpp

https://commits.kde.org/cervisia/7823959ea59b526be947cbdfa00ffab54ce718d9
Comment 4 poldi871 2017-03-24 17:50:27 UTC
thanks a lot