Fix recursive algorithm

BUG: 365652